src/objects/Cir_Planner_Schedule_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Cir_Pln_Sat_PH_End_Time__c</fullName>
        <label>Cir Pln Sat/PH End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cir_Pln_Sat_PH_Start_Time__c</fullName>
        <label>Cir Pln Sat/PH Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cir_Pln_Sun_End_Time__c</fullName>
        <label>Cir Pln Sun End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cir_Pln_Sun_Start_Time__c</fullName>
        <label>Cir Pln Sun Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cir_Pln_Weekday_End_Time__c</fullName>
        <label>Cir Pln Weekday End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cir_Pln_Weekday_Start_Time__c</fullName>
        <label>Cir Pln Weekday Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Cir Planner Schedule Setting</label>
    <nameField>
        <label>Cir Planner Schedule Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cir Planner Schedule Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>